<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aaron.evangelismapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Sin TextView with black background -->
        <TextView
            android:id="@+id/sinTextView"
            style="@style/sinTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenTextViewHeight"
            android:text="@string/sinText" />

        <!-- Blood TextView with red background -->
        <TextView
            android:id="@+id/bloodTextView"
            style="@style/bloodTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenTextViewHeight"
            android:text="@string/bloodText" />


        <!-- Cleansing TextView with white background -->
        <TextView
            android:id="@+id/cleansingTextView"
            style="@style/cleansingTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenTextViewHeight"
            android:text="@string/cleansingText" />

        <!-- Baptism TextView with blue background -->
        <TextView
            android:id="@+id/baptismTextView"
            style="@style/baptismTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenTextViewHeight"
            android:text="@string/baptismText" />

        <!-- Growth TextView with green background -->
        <TextView
            android:id="@+id/growthTextView"
            style="@style/growthTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenTextViewHeight"
            android:text="@string/growthText" />

        <!-- Heaven TextView with yellow background -->
        <TextView
            android:id="@+id/heavenTextView"
            style="@style/heavenTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenTextViewHeight"
            android:text="@string/heavenText" />
    </LinearLayout>
</ScrollView>
